--- a/react-app/package.json
+++ b/react-app/package.json
@@ -37,7 +37,6 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^0.0.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
@@ -51,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "react-scripts": "^0.0.0"
   }
 }
