--- a/react-app/.eslintrc.json
+++ b/react-app/.eslintrc.json
@@ -2,7 +2,6 @@
     "extends": [
       "eslint:recommended",
       "plugin:import/errors",
-      "plugin:react/recommended",
       "plugin:jsx-a11y/recommended",
       "prettier"
     ],
@@ -21,7 +20,7 @@
         }
       ]
     },
-    "plugins": ["react", "import", "jsx-a11y"],
+    "plugins": ["import", "jsx-a11y"],
     "parserOptions": {
       "ecmaVersion": 2018,
       "sourceType": "module",
