--- a/react-app/package.json
+++ b/react-app/package.json
@@ -40,16 +40,18 @@
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
-    "sass": "^1.72.0",
+    "sass": "^1.92.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.37.5",
     "prettier": "^3.2.5",
     "react-scripts": "^0.0.0"
   }
